fix: trying to make actions works part 6

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: BibliotecaDemo/BibliotecaDemo.slnx
+        working-directory: ./BibliotecaDemo
 
     steps:
     - uses: actions/checkout@v4  # Baixa el codi del repositori
