fix: trying to make actions works part 8

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,6 @@ jobs:
     name: Build i Anàlisi de Qualitat
     runs-on: windows-latest
 
-    defaults:
-      run:
-        working-directory: C:\Users\isard\Desktop\Programació\Integració continua\Biblioteca\.github\workflows\BibliotecaDemo
-
     steps:
     - uses: actions/checkout@v4  # Baixa el codi del repositori
 
@@ -20,6 +16,9 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x  # Canvia per la versió que utilitzis (6.0.x, 7.0.x, etc.)
+
+    - name: Canviar a directori de projecte
+      run: cd **./BibliotecaDemo**
 
     - name: Restaurar dependències
       run: dotnet restore
